# dolibarr

./: .buildpath  .codeclimate.yml  .cpanel.yml  .cvsignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmessage  .gitmodules  .hound.yml  .mailmap  .php-cs-fixer.dist.php  .pre-commit-config.yaml  .project  .scrutinizer.yml  .stickler.yml  .travis.yml  CNAME  CONTRIBUTING.md  COPYING  COPYRIGHT  ChangeLog  ChangeLogAtm  ChangeLogAtm.md  ChangeLogTechPap.md  Changelog-ATM-SPECIFIQUE.md  Copy of org.eclipse.wst.validation.prefs  DCO  Dockerfile  Dockerfile.phpstan  Dolibarr_guides.md  INSTALL  Jenkinsfile  Jenkinsfile.deploy  Jenkinsfile.phpstan  Jenkinsfile.sonar  Jenkinsfile.zap  Makefile  PITCHME.md  (+865 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  logToCs.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: README.md  cache-clean-pr.yml  ci.yaml  ci.yml  code_quality.yml  code_quality_qodana.yml  code_quality_qodana.yml.disabled  deploy-now.yaml  doxygen-action.yml.disabled  doxygen-gh-pages.yml  doxygen-gh-pages.yml.disabled  exakat.yml  exakat.yml.disabled  files_changed.yaml  gh-travis.yml  github_ci_php71_pgsql.yml  github_ci_php71_pgsql.yml.disabled  github_ci_php81_mysql.yml  github_ci_php81_mysql.yml.disabled  greetings-pr.yml  greetings-pr.yml.disabled  greetings.yml  phan.yml  php-cs.yml  php-mysql.yml  php.yml  phpcbf.yml  phpcs.yaml  phpcs.yml  phpcsfixer.yaml  phpcsfixer.yml  phpcsfixer.yml.disabled  phpstan.yml  pre-commit.yml  stale-issues-safe.yml  stale-issues.yml  stale-issues.yml.disabled  travis.yml  windows-ci.yaml  windows-ci.yml
.phan/: config.php
.tx/: config
charts/dolibarr/: Chart.yaml  LICENSE  README.md  values.yaml
class/: actions_resource.class.php  html.formresource.class.php
core/ajax/: resource_action.json.php
core/modules/: modResource.class.php
core/tpl/: resource_add.tpl.php  resource_view.tpl.php
d0/d02/: class_modele_p_d_f_suppliers_invoices.html  const_8php.html  const_8php_source.html
d0/d03/: reset-invalid-emails_8php.html  reset-invalid-emails_8php_source.html  resource_8lib_8php.html  resource_8lib_8php_source.html
d0/d05/: group__stocktransfer.html
d0/d06/: classmailing__xinputfile-members.html  classv_card-members.html  pdf__typhon_8modules_8php.html  pdf__typhon_8modules_8php_source.html  user_2group_2ldap_8php.html  user_2group_2ldap_8php_source.html
d0/d0a/: class_interface_ticket_email__inherit__graph.md5  class_modele_p_d_f_member__coll__graph.md5  (+1 more)
debian/: apache.conf  changelog  control  copyright  dolibarr.postinst  dolibarr.postrm  dolibarr.templates  rules
dev/: .gitignore  README  README.txt  datas.php  deduplicatefilelinesrecursively.sh  detectduplicatelangkey.sh  dolibarr_changes.txt  editbuttonsuppinvoice  finddosfiles.sh  findutf8bom.sh  findutf8bomincludes.sh  fixaltlanguages.sh  fixdosfiles.sh  fixduplicatelangkey.sh  fixnotabfiles.sh  fixperms.sh  fixutf8bomfiles.sh  generate-commande.php  generate-facture.php  generate-produit.php  generate-propale.php  generate-societe.php  optimize_images.sh  removeutf8bom.sh  resize_window.sh
doc/: .gitignore  Makefile  Mysql  PITCHME.md  adherent.sgml  dolibarr-doxygen  don.sgml  index.html  manual.sgml  phpmatrix.md
htdocs/: .cvsignore  .gitignore  .htaccess  VERSION  about.php  actioncomm.class.php  actioncomm.class.php3  address.class.php  adherent.class.php  adherent_type.class.php  ajaxbox.php  ajaxresponse.php  bargraph.class.php  bon-prelevement.class.php  bookmark4u.class.php  boxes.php  cache.manifest  cactioncomm.class.php  cactioncomm.class.php3  charge.class.php  chargesociales.class.php  client.class.php  commonobject.class.php  commonobjectline.class.php  companybankaccount.class.php  contact.class.php  contact.class.php3  contact.php  custom  cyberpaiement.class.php  disabled.php  discount.class.php  docsoc.php  document.php  dolgraph.class.php  dolibarr.css  don.class.php  facture.class.php  facture.class.php3  facturefourn.class.php  (+73 more)
live-streaming/: README.txt
misc/: README  purgedemo.sh
mssql/: Makefile  README
mysql/: Makefile  README  convert-innodb.sql  drop.sql  foreign_keys.sql  innodb.sql  mysql-BE.sql  mysql.sql  purge-boutique.sql  rename-tables.sql
output/: 0001-Enable-tooltip-for-calendar-events.patch
pgsql/: Makefile  README  drop-constraints.sql  drop.sql  foreign_keys.sql  header-cvs  pgsql.sql  purge-boutique.sql  rename-tables.sql
public/: default-container-index.html  filefunc.inc.php  robots.txt  viewimage.php
scripts/: count-dons.pl  dump.php  export-mailing.php  factures-impayees-commerciaux.php  file-dons.pl  glasnost-people.py  ldap-update-allcontact.php  mailing-prepare.php  mailing-send.php  newsletter-send.pl  prelevement-verif.php  prelevement.php
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+82 more)
takepos/: invoice.php  takepos.php
test/: .cvsignore  .gitignore  AdherentTest.php  BuildDocTest.php  CommandeTest.php  CommonObjectTest.php  CompanyBankAccount.php  CompanyBankAccountTest.php  ContratTest.php  DateLibTest.php  FactureTest.php  FactureTestSuite.php  MyTestSuite.php  PropalTest.php  README  README.md  UserGroupTest.php  UserTest.php  bootstrap.php  phpunit.xml  phpunittest.xml  phpunittestko.xml  phpunittestok.xml  testA.php  testCase1.php  test_serialize.php
(+42628 files in other folders)
